--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -20,6 +20,8 @@ jobs:
       uses: actions/setup-go@v4
       with:
         go-version: '1.20'
+    - name: Locate
+      run: cd go
 
     - name: Build
       run: go build -v ./...
