--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -21,7 +21,7 @@ jobs:
       with:
         go-version: '1.20'
     - name: Locate
-      run: cd go
+      run: pwd
 
     - name: Build
       run: go build -v .
