--- a/go/slurper.yaml
+++ b/go/slurper.yaml
@@ -1,2 +1,2 @@
-configpath: /Users/jscanlon/.oci/configs
-profileName: CHILD_jossur4n01
+configPath: /Users/jscanlon/.oci/configs
+profileName: NATIONAL02
