--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -24,7 +24,7 @@ jobs:
       run: pwd
 
     - name: Build
-      run: go build -v .
+      run: go build -v ./.../go
 
     - name: Test
       run: go test -v .
