--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -5,7 +5,7 @@ name: Go
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "staging" ]
   pull_request:
     branches: [ "main" ]
 
@@ -22,6 +22,9 @@ jobs:
         go-version: '1.20'
     - name: Locate
       run: pwd
+    - name: CD_ME
+      run: cd go
+
 
     - name: Build
       run: go build -v .
