--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -30,7 +30,7 @@ jobs:
 
 
     - name: Build
-      run: go build -v .
+      run: cd go; go build -v .
 
     - name: Test
       run: go test -v .
