--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -35,7 +35,16 @@ jobs:
 
     - name: List
       run: ls -lart ./bin
-      
+
         
 
-   
+  release-linux-amd64:
+    name: release linux/amd64
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+    - uses: wangyoucao577/go-release-action@v1
+      with:
+        github_token: ${{ secrets.RELEASE_TOKEN }}
+        goos: linux
+        goarch: amd64
