--- a/bin/toolkit-config.yaml
+++ b/bin/toolkit-config.yaml
@@ -1,3 +1,4 @@
 configPath: /Users/jscanlon/.oci/config
-profileName: CE
+profileName: DEFAULT
+useinstanceprincipal: false
 SUPPORT_CSI_NUMBER: 21942898
