--- a/toolkit-config.yaml
+++ b/toolkit-config.yaml
@@ -1,4 +1,4 @@
 configPath: /Users/jscanlon/.oci/config
-profileName: DEFAULT
+profileName: CE
 useinstanceprincipal: false
 SUPPORT_CSI_NUMBER: 21942898
